# healthlynked-provider-pipeline

./: .dockerignore  .gitignore  README.md  SUBMISSION.md  alembic.ini  main.py  pyproject.toml
api/: app.py
dashboard/: app.py
data/: bakeoff_results.txt  gold.jsonl  seed_npis.json
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 02c935f1b1b4_initial_schema.py
deploy/: .env.example  Dockerfile  docker-compose.yml
eval/: accuracy_eval.py  populate_cost_demo.py
pipeline/: audit.py  confidence.py  config.py  decide.py  match.py  normalize.py  proxies.py  recency.py  run.py  schemas.py  stage0_staleness.py
pipeline/llm/: bakeoff.py  openrouter.py  reconcile.py
pipeline/sources/: crawlee_plugin.py  google_search.py  nppes.py  web_enrich.py
review/: codex_gen_tests.py  codex_review.py  demo_video.py  generate_music.py  make_thumbnail.py  mux_narration.py  tts.py
scheduler/: worker.py
tests/: test_confidence.py  test_decide.py  test_hard_codex.py  test_match_staleness.py  test_normalize.py
