[project]
name = "healthlynked"
version = "0.1.0"
description = "Cost-efficient AI pipeline that keeps a healthcare provider/practice directory accurate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "cloakbrowser>=0.4.0",
    "crawlee[playwright]>=1.7.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "phonenumbers>=9.0.33",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rapidfuzz>=3.14.5",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "usaddress>=0.5.16",
    "usaddress-scourgify>=0.6.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
